2021-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Ported package to Qt5.
	* Changed the startup system to Systemd.
2021-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Added code to purge stale host entries to in
	'scripts/aman_add_replication_users.pl'.
2022-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Removed support for RHEL6.
2022-03-03 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'StatusLight' class to 'AMStatusLight'.
	* Moved the 'Connection' class to 'AMConnctionClass'.
2022-03-04 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out amanrmt(1) client.
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Got DB replication working in amanrmt(1).
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Got audio replication working in amanrmt(1).
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'aman-remote' RPM subpackage.
2022-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.18rmt0.
2022-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in amand(8) that could cause the ping tables to be
	created with the incorrect table engine type.
2022-03-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a table engine type check to amand(8).
	* Removed stale progress dialog implication from aman(8).
	* Added an 'AMConnection::errorReturned()' signal.
2022-03-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a modeless progress dialog box to aman(1).
2022-03-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in aman(1) that caused the 'Make Master' button
	to be enabled for a host when the opposite system was already
	Master.
2022-03-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'aman_add_remote_replication_user.pl' provisioning script.
	* Added a progress dialog to amanrmt(8).
2022-03-13 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default value of the 'MysqlReplicationTimeout'
	directive in the '[Global]' section of aman.conf(5) from
	60000 to 10.